Bug 242259 - Fix memory leak
Summary: Fix memory leak
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: Safari 15
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Per Arne Vollan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-07-01 12:42 PDT by Per Arne Vollan
Modified: 2022-07-01 12:58 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Per Arne Vollan 2022-07-01 12:42:46 PDT
Fix memory leak after calling AudioComponentFetchServerRegistrations.
Comment 1 Per Arne Vollan 2022-07-01 12:44:07 PDT
<rdar://96029757>
Comment 2 Per Arne Vollan 2022-07-01 12:45:12 PDT
Pull request: https://github.com/WebKit/WebKit/pull/2008
Comment 3 EWS 2022-07-01 12:58:37 PDT
Committed 252064@main (02309bba8c65): <https://commits.webkit.org/252064@main>

Reviewed commits have been landed. Closing PR #2008 and removing active labels.