Fix memory leak https://bugs.webkit.org/show_bug.cgi?id=242259 <rdar://96029757>

Reviewed by Chris Dumez.

Fix memory leak after calling AudioComponentFetchServerRegistrations.

* Source/WebKit/UIProcess/Cocoa/AuxiliaryProcessProxyCocoa.mm:
(WebKit::AuxiliaryProcessProxy::fetchAudioComponentServerRegistrations):

Canonical link: https://commits.webkit.org/252064@main